--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -1,6 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/nav_graph">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/nav_graph"
+    app:startDestination="@id/mainFragment">
+
+    <fragment
+        android:id="@+id/mainFragment"
+        android:name="com.jwilder.tinder.ui.MainFragment"
+        android:label="MainFragment">
+        <action
+            android:id="@+id/action_mainFragment_to_expandedGifFragment"
+            app:destination="@id/expandedGifFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/expandedGifFragment"
+        android:name="com.jwilder.tinder.ui.ExpandedGifFragment"
+        android:label="fragment_expanded_gif"
+        tools:layout="@layout/fragment_expanded_gif" />
+
 
 </navigation>
